--- a/backend-reseau-social/package.json
+++ b/backend-reseau-social/package.json
@@ -17,6 +17,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@prisma/client": "^5.13.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6"
   },
