--- a/backend-reseau-social/tsconfig.json
+++ b/backend-reseau-social/tsconfig.json
@@ -9,5 +9,8 @@
     "esModuleInterop": true,
     "types": ["node"],
     "strict": true
-  }
+  },
+  "include": [
+    "node_modules/@prisma/client/index.d.ts"
+  ]
 }
