--- a/backend-reseau-social/package.json
+++ b/backend-reseau-social/package.json
@@ -17,17 +17,22 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
+    "apollo-server": "^3.13.0",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/client-preset": "^4.2.5",
     "@graphql-codegen/typescript": "^4.0.6",
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
-    "@types/node": "^20.12.7",
-    "prisma": "^5.12.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.12",
+    "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
